# retro

./: .metadata  README.md  pubspec.yaml
android/app/: build.gradle
lib/: main.dart
lib/components/: background.dart  background_card.dart  core_item.dart  game_item.dart  game_item_list.dart  game_item_no_effect.dart  game_item_not_img.dart  game_item_small.dart  gamepad_big_button.dart  home_bar.dart  home_bar_config.dart  list_roms_with_core_name.dart  list_with_title.dart  profile.dart  redme.md  setting_options_big.dart  setting_title.dart  settings_option.dart  start_menu.dart
lib/components/backgrounds/: background.dart  background_card.dart  (+1 more)
lib/database/: db.dart  db.g.dart
lib/db/: database.dart  database.g.dart
lib/models/: core_model.dart  game_item.dart  game_model.dart
lib/pages/: add_arts.dart  edit_roms.dart  first_init.dart  home.dart  setting_core.dart  settings.dart  settings_gamepad.dart  settings_modal.dart
lib/providers/: change_background.dart  database_provider.dart  db_provider.dart  start_menu_provider.dart
lib/tools/: app_dir_manager.dart  core_info.dart  game_pad_input_handle.dart
linux/: CMakeLists.txt  my_application.cc
messages/: configure.proto  game_pad_button_pressed.proto  game_pad_connected.proto  game_pad_list.proto  load_core.proto  load_rom.proto  load_state.proto  pause.proto  resume.proto  save_state.proto
native/hub/: Cargo.toml
native/hub/src/: event.rs  game_pad.rs  lib.rs  sample_functions.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+22 files in other folders)
