[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "7.1.0"
prost = "0.13.0"
tokio = { version = "1", features = ["rt", "macros"] }
tinic = { git = "https://github.com/Xsimple1010/tinic.git" }
